crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/noUpAxis.usda
version https://git-lfs.github.com/spec/v1
oid sha256:3a46e5b412550e3d534547572a1dabe44e980f47ea19d4fde8507657430c24bd
size 89
